# ForgeAPI

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.cpp
.github/workflows/: docs_generator.yml  style_check.yml  unit_tests.yml
html/: dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  graph_legend.html  index.html  namespaceForgeAPI.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  test_8cpp.html  test_8cpp__incl.map  test_8cpp__incl.md5  test_8cpp_source.html  test_8h.html  test_8h__dep__incl.map  test_8h__dep__incl.md5  test_8h_source.html
html/search/: all_0.js  all_1.js  all_2.js  files_0.js  functions_0.js  namespaces_0.js  searchdata.js
include/: test.h
src/: CMakeLists.txt  test.cpp
test/: CMakeLists.txt  example_test.cc
